      Make illumos build warning-free.
      Makefile.in: Update the .c.o build rule (Remove hacks for old SunOS 4).
      Autoconf: fix buggy tests for ether_ntohost().
      CMake: Skip snprintf(3) tests when cross-compiling.
      Makefile.in: Do not install a version-suffixed tcpdump binary if the
        .devel file does not exists.
      tests: On HP-UX use "diff -c" by default.
    Documentation:
      man: Clarify the "any" pseudo-interface further.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 4.99.6 tcpdump release (so far!)
    Refine protocol decoding for:
      IPv6: Add a missing comma and remove a colon in the output.
      TCP: Note if the Urgent Pointer is non-zero while URG flag not set,
           if the verbose level is > 1 (option -vv and more).
      TCP: Note if the Acknowledgment Number is non-zero while ACK flag not set,
           if the verbose level is > 1 (option -vv and more).

Friday, August 30, 2024 / The Tcpdump Group
  Summary for 4.99.5 tcpdump release
    Refine protocol decoding for:
      Arista: Use the test .pcap file from pull request #955 (HwInfo).
      BGP: Fix an undefined behavior when it tries to parse a too-short packet.
      CARP: Print the protocol name before any GET_().
      CDP: only hex-dump unknown TLVs in verbose mode.
      DHCP: parse the SZTP redirect tag.
      DHCPv6: client-id/server-id DUID type 2 correction; parse the user class,
        boot file URL, and SZTP redirect options; add DUID-UUID printing
        (RFC6355).
      DNS: Detect and correctly handle too-short URI RRs.
      EAP: Assign ndo_protocol in the eap_print() function.
      ESP: Don't use EVP_add_cipher_alias() (fixes building on OpenBSD 7.5).
      Frame Relay (Multilink): Fix the Timestamp Information Element printing.
      ICMPv6: Fix printing the Home Agent Address Discovery Reply Message.
      IEEE 802.11: no need for an element ID in the structures for IEs, make